# drf-api-action-example

./: LICENSE  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
drf_api_action_example/tasks/: faker.py  models.py  serializers.py  views.py
drf_api_action_example/users/: faker.py  models.py  serializers.py  views.py
drf_api_action_example_tests/: fixtures.py  plugin.py  tests.py  tests_implementation_as_fixture.py  tests_implementation_in_viewset.py
